#6642 Matrix wrong paddings -fixed action classes Fixes #6642

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -178,9 +178,9 @@
   }
 }
 
-.sd-table__cell--actions:not(.sd-table__cell--vertical):not(.sd-table__cell--drag) {
+.sd-table__cell--actions:not(.sd-table__cell--vertical) {
   width: 0;
-  &:first-of-type {
+  &:not(.sd-table__cell--drag):first-of-type {
       padding-left: 0;
     }
 }
